--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,16 @@
     margin-top: 10px;
     margin-left: 30em;
 }
+.inputEditForm{
+    width: 30%;
+    margin-top: 10px;
+    margin-left: 30em;
+}
+.buttonEdit{
+    width: 30%;
+    margin-top: 3px;
+    margin-left: 34.3em;
+}
 .divDeleteTable{
     font-size: 18px;
 }
