--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,23 @@
 .table_length{
     color: black;
 }
+.inputArhivForm{
+    width: 15%;
+}
+.text-field__input {
+    display: block;
+    width: 13%;
+    height: 33px;
+    padding: 0.375rem 0.75rem;
+    font-family: inherit;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #bdbdbd;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    display: inline;
+  }
