--- a/src/index.css
+++ b/src/index.css
@@ -47,3 +47,9 @@
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
     display: inline;
   }
+  .loader-div{
+    display: flex;
+    justify-content: center;
+    margin-top: 5em;
+    font-size: 32px;
+  }
